# vAmigaNet

./: .eslintrc.cjs  .gitignore  README.md  localhost-ca.cert  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
cpp/: CMakeLists.txt  Proxy.cpp  Proxy.h  main.cpp  main_worker.cpp
cpp/emulator/: CMakeLists.txt  vamiga.h
cpp/emulator/Agnus/DmaDebugger/: DmaDebugger.cpp
cpp/emulator/Base/: MsgQueue.cpp  Thread.cpp  Thread.h
cpp/emulator/CIA/: CIA.h
cpp/emulator/Components/: Amiga.cpp
cpp/emulator/RetroShell/: RetroShell.cpp
src/: app.d.ts  app.html
src/lib/: Audio.svelte  BrowserCheck.svelte  Button.svelte  ButtonLink.svelte  Carousel.svelte  Carousel2.svelte  CarouselItem.svelte  DragAndDrop.svelte  Emscripten.svelte  Emulator.svelte  GLCanvas.svelte  Guru.svelte  HeroLink.svelte  Icon.svelte  Impressum.svelte  Impressum2.svelte  Kickstarts.svelte  MainScreen.svelte  MySiema.svelte  Proxy.svelte  RetroShell.svelte  RomViewer.svelte  Sedcard.svelte  Showcases.svelte  Showcases2.svelte  StatusBar.svelte  TitleScreen.svelte  Toolbar.svelte  ToolbarItem.svelte  ToolbarSection.svelte  VAmiga.svelte  constants.ts  database.ts  stores.ts  types.ts
src/lib/DropZone/: DropZone.svelte  DropZoneCell.svelte
src/lib/Globals/: Audio.svelte  Config.svelte  GamepadManager.svelte
src/lib/Settings/: AudioSettings.svelte  CompSettings.svelte  ConfigCategory.svelte  ConfigItem.svelte  ConfigSection.svelte  GeneralSettings.svelte  MachineSettings.svelte  Settings.svelte
src/lib/Showcases/: Carousel.svelte  CarouselItem.svelte  Sedcard.svelte  Showcases.svelte  database.ts
src/lib/Sidebar/: Sidebar.svelte  SidebarButton.svelte  SidebarPad.svelte
src/lib/Statusbar/: DeviceInfo.svelte  FloppyDriveInfo.svelte  HardDriveInfo.svelte  Speedometer.svelte  StatusBar.svelte  StatusIcon.svelte  WarpControl.svelte
src/lib/Utils/: AnimatedFloat.ts  FileDialog.svelte  Movable.svelte  MovableWindow.svelte  TextureRect.ts
src/lib/Widgets/: Checkmark.svelte  Chevron.svelte  DropDown2.svelte  DropDownList.svelte  Logo.svelte  MainPageLink.svelte  Menu.svelte  MyButton.svelte  MyDropDown.svelte  Slider.svelte  TemplateImage.svelte
src/lib/audio/: AudioNode.svelte  RingBuffer.ts
src/lib/db/: FriendAdder.svelte  FriendList.svelte  db.ts
src/lib/settings/: AudioSettings.svelte  Chevron.svelte  CompSettings.svelte  ConfigCategory.svelte  ConfigItem.svelte  ConfigRow.svelte  ConfigSection.svelte  GeneralSettings.svelte  MachineSettings.svelte  Settings.svelte  VideoSettings.svelte
src/lib/sidebar/: Sidebar.svelte  SidebarButton.svelte  SidebarItem.svelte  SidebarSection.svelte
src/lib/statusbar/: BarBox.svelte  DeviceInfo.svelte  Speedometer.svelte  StatusBar.svelte  StatusIcon.svelte  WarpControl.svelte
src/lib/toolbar/: Toolbar.svelte  ToolbarItem.svelte  ToolbarSection.svelte  ToolbarSeparator.svelte
src/lib/utils/: AnimatedFloat.ts  MovableWindow.svelte  TextureRect.ts
src/lib/widgets/: Button.svelte  Carousel.svelte  CarouselItem.svelte  DropDown.svelte  GLCanvas.svelte  Logo.svelte  MainPageLink.svelte  Movable.svelte  Slider.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/emulator/: +page.svelte  DragAndDrop.svelte
src/routes/playground/: +page.svelte
src/routes/showcases/: +page.svelte  database.ts  showcases.ts
static/: manifest.json  serviceWorker.js  vAmiga.worker.js
static/adf/: 3Ddemo2.adf  AbsoluteInebriation1.adf  AbsoluteInebriation2.adf  AmigaTestKit.adf  BatmanRises1.adf  BatmanRises2.adf  CelticHeart.adf  ChinaChallengeII.adf  Defender1.adf  Defender2.adf  DesertDream1.adf  DesertDream2.adf  Eon1.adf  Eon2.adf  Kyrios.adf  Paccer.adf  StateArt.adf  Sushiboyz.adf  SysInfo.adf  TrapRunner.adf
static/fonts/: azeret-mono-v11-latin-regular.eot  sofia-sans-extra-condensed-v1-latin-800.eot  sofia-sans-extra-condensed-v1-latin-regular.eot  sofia-sans-semi-condensed-v1-latin-600.eot  sofia-sans-semi-condensed-v1-latin-regular.eot
static/js/: audio-processor.js  vAmiga_audioprocessor.js  white-noise-processor.js
